<resources>
    <string name="app_name">FinalSudoku</string>
    <string name="todo">TODO</string>
    <string name="sudoku">Sudoku</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="settings">TODO</string>
    <string name="daily">TODO</string>
    <string name="new_game">New Game</string>
    <string name="new_game_text">New Game</string>
    <string name="create">Create</string>
    <string name="new_game1">New Game</string>
    <string name = "btn_confetti">Confetti</string>
    <string name = "name">ConfettiAnimation</string>
    <string name="button">Button</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="solve">\?</string>
    <string name="textview">TextView</string>
    <string name="todo5">TODO</string>
    <string name="clear" />
    <string name="Time">Time</string>
    <string name="Mistakes">mistakes\n</string>
    <string name="mistakeCount">0/3</string>
    <string name="mute_sound">Mute Sound</string>
    <string name="how_to_play">How to Play</string>
    <string name="mystery">Mystery</string>
    <string name="todo4">todo4</string>
    <string name="todo12">TODO</string>
    <string name="todo37">TODO</string>
    <string name="space">" "</string>
    <string name="space2" />
    <string name="yeah_i_know_but_where_do_i_put_it_ashvin_1_24_39_p_m">\'Yeah I know but where do I put it?\' - Ashvin 1:24:39 P.M.</string>
    <string name="explode">Explode</string>
    <string name="parade">Return to Menu</string>
    <string name="rain">Rain</string>
    <string name="congratulations">Congratulations !</string>
</resources>