<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"

    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tool:context=".Congratulations"
    android:id="@+id/congratulations">
    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.135"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image" />

        <ImageView
            android:id="@+id/shimmer"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_marginStart="-50dp"
            android:src="@drawable/shimmer" />

        <com.example.finalsudoku.Game
            android:id="@+id/board"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:flow_verticalBias="0"
            custom:CellFillColor="#6600DDFF"
            custom:boardColor="#000000"
            custom:cellHighlightColor="#2600DDFF"
            custom:letterColor="#000000"
            custom:letterColorSolve="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/works"
        android:layout_width="341dp"
        android:layout_height="200dp"
        android:clickable="true"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.135"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/shine"
            android:layout_width="70dp"
            android:layout_height="200dp"
            android:background="@drawable/bg_shine"
            android:rotation="20" />
    </RelativeLayout>


    <ImageButton
        android:id="@+id/yay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/homeAsUpIndicator"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"/>

    <Button
        android:id="@+id/returnmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="82dp"
        android:text="Score: "
        app:layout_constraintBottom_toTopOf="@+id/returnmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="55dp"
        android:text="19800"
        app:layout_constraintBottom_toTopOf="@+id/returnmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/finalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/returnmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toEndOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>